# learning-core

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent_EXAMPLE.py  pyproject.toml
docs/: CURRENT_PRODUCT_AND_RUNTIME_MODEL.md  SKILL_ASSUMPTION_AUDIT.md  source-taxonomy-model.md
docs/agent-feedback/: README.md  pack-gap-taxonomy.md  prompt-change-brief-template.md
learning_core/: agent.py
learning_core/api/: app.py
learning_core/contracts/: __init__.py  activity.py  activity_feedback.py  base.py  bounded_plan.py  copilot.py  curriculum.py  evaluation.py  (+11 more)
tests/: launch_eval_runner.py  test_activity_feedback.py  test_activity_generate_preview.py  test_activity_generate_widget_validation.py  test_api_gateway_stream.py  test_api_operations.py  test_backward_compatibility.py  test_bounded_plan_generate.py  test_chess_activity_planning.py  test_chess_engine.py  test_chess_pack_planning.py  test_copilot_contract.py  test_curriculum_generate.py  test_curriculum_revise_skill.py  test_geography_pack.py  test_launch_eval_fixtures.py  test_launch_plan_contract.py  test_map_runtime.py  test_math_pack_validation.py  test_pack_isolation.py  test_progression_contracts.py  test_progression_prompt.py  test_provider_logs.py  test_runtime_env.py  test_runtime_kernel.py  test_runtime_orchestration.py  test_runtime_providers.py  test_session_generate_lesson_shape.py  test_skill_registry.py  test_source_interpret.py  test_teaching_guide_generate.py  test_topic_suggest.py  test_ui_component_tool.py  test_widget_transition.py  test_widgets_contract.py
(+199 files in other folders)
