[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-core"
version = "0.1.0"
description = "Headless agent runtime and typed AI contracts for learning products."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-ollama>=0.3.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.10.0",
  "python-chess>=1.999",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
learning-core = "learning_core.api.app:main"

[tool.setuptools.packages.find]
include = ["learning_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
